Add base bot feature

--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,13 @@
     "require": {
         "vlucas/phpdotenv": "^4.1",
         "linecorp/line-bot-sdk": "^4.1"
+    },
+    "autoload": {
+        "psr-4": {
+            "App\\": "app"
+        },
+        "files": [
+            "bootstrap/helpers.php"
+        ]
     }
 }
